bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: value =< is not a member of Int
  if (Math.abs(100-n)=<10) {
                     ^NearHundred:5: error: value =< is not a member of Int
  if (Math.abs(200-n)=<10) {
                     ^